Apply basic css

--- a/gsb-frais/templates/acceuil/vueAccueil.html.twig
+++ b/gsb-frais/templates/acceuil/vueAccueil.html.twig
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>Acceuil</title>
+        <title>Accueil</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="{{ asset('styles/acceuil.css')}}" rel="stylesheet">
-        <link href="{{ asset('styles/annimation.css')}}" rel="stylesheet">
+        <link href="{{ asset('styles/vueAccueil.css')}}" rel="stylesheet" type="text/css">
+        <link href="{{ asset('styles/annimation.css')}}" rel="stylesheet" type="text/css">
     </head>
     <body>
 
         <script type="text/javascript" src="{{ asset('js/acceuil.js') }}"></script>
-    
+
         <div class="page">
 
             <div class="area">
