--- a/gsb-frais/templates/visiteur/vueHistorique.html.twig
+++ b/gsb-frais/templates/visiteur/vueHistorique.html.twig
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="{{ asset('styles/vueHistorique.css')}}" rel="stylesheet" type="text/css">    
     <title>Visiteur - historique</title>
 </head>
 <body>
-    
+
     <div class="page">
 
         <div class="fiches_list_position">
