--- a/gsb-frais/templates/acceuil/vueAccueil.html.twig
+++ b/gsb-frais/templates/acceuil/vueAccueil.html.twig
@@ -31,7 +31,7 @@
 
                     <div class="form_visiteur" id="form_visiteur">
                         
-                        <h1>Visiteur</h1>
+                        <h1>Connectez vous en tant que Visiteur</h1>
                         <div class="login_form">
                             <form action="/visiteur/login" method="POST">
     
@@ -55,7 +55,7 @@
                     </div>
         
                     <div class="form_comptable" id="form_comptable">
-                        <h1>Comptable</h1>
+                        <h1>Connectez vous en tant que Comptable</h1>
 
                         <div class="login_form">
                             <form action="/comptable/login" method="POST">
