--- a/gsb-frais/templates/visiteur/vueFiche.html.twig
+++ b/gsb-frais/templates/visiteur/vueFiche.html.twig
@@ -14,6 +14,7 @@
         <a class="header-title">GSB-Frais</a>
 
         <a class="header-link" href="/">Deconnexion</a>
+        <a class="header-link" href="/visiteur/historique">Historique</a>
         <a class="header-link" href="/visiteur/frais">Fiches</a>
     </div>
 
