--- a/gsb-frais/templates/visiteur/vueHistorique.html.twig
+++ b/gsb-frais/templates/visiteur/vueHistorique.html.twig
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+    <div class="header">
+        <a class="header-title">GSB-Frais</a>
+
+        <a class="header-link" href="/">Deconnexion</a>
+        <a class="header-link" href="/visiteur/historique">Historique</a>
+        <a class="header-link" href="/visiteur/frais">Fiches</a>
+    </div>
+
     <div class="page">
 
         <div class="fiches_list_position">
