--- a/gsb-frais/public/styles/vueFiche.css
+++ b/gsb-frais/public/styles/vueFiche.css
@@ -67,9 +67,10 @@
 .fiche_position
 {
     position: relative;
-    padding: 50px 50px 0px 50px;
+    padding-top: 50px;
     width: 650px;
     display: flex;
+    margin: 0 auto;
 }
 
 .fiche_frais
@@ -77,7 +78,7 @@
     position: relative;
     height: 80vh;
     width: 100%;
-
+    overflow: scroll;
     background-color: white;
     -webkit-box-shadow: 0px 0px 10px 5px rgba(94,94,94,0.54); 
     box-shadow: 0px 0px 10px 5px rgba(94,94,94,0.54);
