logout clear session

--- a/gsb-frais/templates/visiteur/vueFiche.html.twig
+++ b/gsb-frais/templates/visiteur/vueFiche.html.twig
@@ -12,8 +12,8 @@
     
     <div class="header">
         <a class="header-title">GSB-Frais</a>
-
-        <a class="header-link" href="/">Deconnexion</a>
+        
+        <a class="header-link" href="/deconnexion">Deconnexion</a>
         <a class="header-link" href="/visiteur/historique">Historique</a>
         <a class="header-link" href="/visiteur/frais">Fiches</a>
     </div>
