--- a/gsb-frais/templates/visiteur/vueFiche.html.twig
+++ b/gsb-frais/templates/visiteur/vueFiche.html.twig
@@ -41,7 +41,14 @@
                             {% for unFrais in fraisForfait %}
                                 <tr>
                                     <td class="td_libelle">{{unFrais["libelle"]}}</td>
-                                    <td class="td_input"><input name="frais_forfait[{{loop.index}}]" input class="input_prix" type="number" value="0" min="0"></td>
+                                    <td class="td_input">
+                                        <input 
+                                            name="frais_forfait[{{loop.index}}]" 
+                                            input class="input_prix" type="number" 
+                                            value="{{ligneFraisForfait[loop.index0]['quantite']}}" 
+                                            min="0"
+                                        >
+                                    </td>
                                 </tr>
                             {% endfor %}
                         </tbody>
