--- a/gsb-frais/public/styles/vueFiche.css
+++ b/gsb-frais/public/styles/vueFiche.css
@@ -82,6 +82,7 @@
     background-color: white;
     -webkit-box-shadow: 0px 0px 10px 5px rgba(94,94,94,0.54); 
     box-shadow: 0px 0px 10px 5px rgba(94,94,94,0.54);
+    overflow: hidden;
 }
 
 .fiche_frais h1
@@ -92,45 +93,59 @@
     font-size: 25px;
 }
 
-.input_libelle{
-	font-family: "Roboto", sans-serif;
-	background-color: rgb(255, 255, 255);
-    width: 70%;
-    font-size: 15px;
-    border: 1px solid black;
-}
-
-.input_prix{
-    text-align: center;
-	font-family: "Roboto", sans-serif;
-	background-color: rgb(240, 240, 240);
-	border: 0px;
-	box-sizing: border-box;
-	font-size: 15px;
-    width: 100%;
-}
-
-.input_prix::-webkit-outer-spin-button,
-.input_prix::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  appearance: none;
-  margin: 0;
-}
 
 
-.table
-{
+
+table {
     border-collapse: collapse;
+    font-family: 'Hind Siliguri', sans-serif;
+}
+
+.table_fiche
+{
+    width: 85%;
+    position: relative;
+    margin: 0 auto 30px;
+
+}
+
+.table_fiche tr
+{
+    height: 35px;
 }
 
 .table_fiche th
 {
-    font-size: 12px;
+    font-size: 16px;
     color: #fff;
     line-height: 1.4;
     text-transform: uppercase;
-    background-color: #36304a;
+    background-color: #6C79E0;
 }
+
+.th_libelle
+{
+    width: 80%;
+}
+.th_quantite
+{
+    width: max-content;
+}
+
+.th_hf_libelle
+{
+    width: 55%;
+}
+.th_hf_date
+{
+    width: 25%;
+}
+
+.th_hf_prix
+{
+    width: max-content;
+}
+
 
 /*
 .td_libelle
@@ -151,6 +166,50 @@
     line-height: 25px;
 }
 */
+
+
+
+.input_libelle{
+	font-family: "Roboto", sans-serif;
+	background-color: rgb(255, 255, 255);
+    width: 90%;
+    font-size: 15px;
+    border: 1px solid black;
+}
+
+.td_date {
+    text-align: center;
+    }
+
+input[type=date]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    display: none;
+}
+input[type=date]::-webkit-calendar-picker-indicator {
+    -webkit-appearance: none;
+    display: none;
+}
+
+.input_prix{
+    text-align: center;
+	background-color: rgb(225, 225, 225);
+	border: 0px;
+	box-sizing: border-box;
+	font-size: 15px;
+    display:inline-block;
+    width: 100%;
+    height: 35px;
+}
+
+.input_prix::-webkit-outer-spin-button,
+.input_prix::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+
+
 
 .add_frais_button_position
 {
