fiche frais : gestion des horst frais + début historique

--- a/gsb-frais/public/styles/vueHistorique.css
+++ b/gsb-frais/public/styles/vueHistorique.css
@@ -128,3 +128,58 @@
 {
     background-color: hsl(39, 87%, 53%);
 }
+
+
+
+
+.fiche_position
+{
+    position: relative;
+    padding-top: 50px;
+    width: 650px;
+    display: flex;
+    margin: 0 auto;
+}
+
+.fiche_frais
+{
+    position: relative;
+    height: 80vh;
+    width: 100%;
+    overflow: scroll;
+    background-color: white;
+    -webkit-box-shadow: 0px 0px 10px 5px rgba(94,94,94,0.54); 
+    box-shadow: 0px 0px 10px 5px rgba(94,94,94,0.54);
+    overflow: hidden;
+}
+
+.fiche_frais h1
+{
+    text-align: center;
+    margin: 20px;
+    font-family: 'Hind Siliguri', sans-serif;
+    font-size: 25px;
+}
+
+.table_fiche tr
+{
+    height: 35px;
+}
+
+.table_fiche th
+{
+    font-size: 16px;
+    color: #fff;
+    line-height: 1.4;
+    text-transform: uppercase;
+    background-color: #6C79E0;
+}
+
+.th_libelle
+{
+    width: 80%;
+}
+.th_quantite
+{
+    width: max-content;
+}
