--- a/gsb-frais/templates/visiteur/vueFiche.html.twig
+++ b/gsb-frais/templates/visiteur/vueFiche.html.twig
@@ -68,12 +68,14 @@
                             </thead>
 
                             <tbody>
-                                <tr>
-                                    <td class="td_libelle"><input name="frais_hors_forfait[0][libelle]" id="td_libelle_0" class="input_libelle" type="text" value=""></td>
-                                    <td class="td_date"><input name="frais_hors_forfait[0][date]" id="td_date_0" class="input_date" type="date"></td>
-                                    <td class="td_input"><input name="frais_hors_forfait[0][input]" id="td_input_0" class="input_prix" type="number" value="0" min="0"></td>
-                                    <td>&span<td>
-                                </tr>
+                                {% for unHorsFrais in ligneFraisHorsForfait %}
+                                    <tr>
+                                        <td class="td_libelle"><input name="frais_hors_forfait[0][libelle]" id="td_libelle_0" class="input_libelle" type="text" value="{{unHorsFrais["libelle"]}}"></td>
+                                        <td class="td_date"><input name="frais_hors_forfait[0][date]" id="td_date_0" class="input_date" type="date" value="{{unHorsFrais["date"]}}"></td>
+                                        <td class="td_input"><input name="frais_hors_forfait[0][input]" id="td_input_0" class="input_prix" type="number" value="{{unHorsFrais["montant"]}}" min="0"></td>
+                                        <td>&span<td>
+                                    </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
 
