fiche frais : add frais HF + fix js

--- a/gsb-frais/templates/visiteur/vueFiche.html.twig
+++ b/gsb-frais/templates/visiteur/vueFiche.html.twig
@@ -8,8 +8,9 @@
     <title>Visiteur - Pannel</title>
 </head>
 <body>
-    <script type="text/javascript" src="{{ asset('js/fiches_frais.js')}}"></script>
-    
+    <script type="text/javascript" src="{{ asset('js/fiches_frais.js')}}">
+    </script>
+
     <div class="header">
         <a class="header-title">GSB-Frais</a>
         
@@ -68,18 +69,59 @@
                             </thead>
 
                             <tbody>
-                                {% for unHorsFrais in ligneFraisHorsForfait %}
-                                    <tr>
-                                        <td class="td_libelle"><input name="frais_hors_forfait[0][libelle]" id="td_libelle_0" class="input_libelle" type="text" value="{{unHorsFrais["libelle"]}}"></td>
-                                        <td class="td_date"><input name="frais_hors_forfait[0][date]" id="td_date_0" class="input_date" type="date" value="{{unHorsFrais["date"]}}"></td>
-                                        <td class="td_input"><input name="frais_hors_forfait[0][input]" id="td_input_0" class="input_prix" type="number" value="{{unHorsFrais["montant"]}}" min="0"></td>
-                                        <td>&span<td>
-                                    </tr>
-                                {% endfor %}
+
+                                {% if ligneFraisHorsForfait is empty %}
+
+                                        <tr>
+                                            <td class="td_libelle"><input name="frais_hors_forfait[0][libelle]" id="td_libelle_0" class="input_libelle" type="text"></td>
+                                            <td class="td_date"><input name="frais_hors_forfait[0][date]" id="td_date_0" class="input_date" type="date"></td>
+                                            <td class="td_input"><input name="frais_hors_forfait[0][input]" id="td_input_0" class="input_prix" type="number" value="0" min="0"></td>
+                                            <td>x<td>
+                                        </tr>
+
+
+                                {% else %}
+
+                                    {% for unHorsFrais in ligneFraisHorsForfait %}
+                                        <tr>
+                                            <td class="td_libelle">
+                                                <input 
+                                                    name="frais_hors_forfait[{{loop.index0}}][libelle]" 
+                                                    id="td_libelle_{{loop.index0}}" 
+                                                    class="input_libelle" 
+                                                    type="text" 
+                                                    value="{{unHorsFrais["libelle"]}}">
+                                            </td>
+                                            
+                                            <td class="td_date">
+                                            
+                                                <input 
+                                                    name="frais_hors_forfait[{{loop.index0}}][date]" 
+                                                    id="td_date_{{loop.index0}}" 
+                                                    class="input_date" 
+                                                    type="date" 
+                                                    value="{{unHorsFrais["date"]}}">
+                                            </td>
+                                            
+                                            <td class="td_input">
+                                                <input 
+                                                    name="frais_hors_forfait[{{loop.index0}}][input]" 
+                                                    id="td_input_{{loop.index0}}" 
+                                                    class="input_prix" 
+                                                    type="number" 
+                                                    value="{{unHorsFrais["montant"]}}" 
+                                                    min="0">
+                                            </td>
+                                            
+                                            <td>x</td>
+                                        </tr>
+                                    {% endfor %}
+
+                                {% endif %}
                             </tbody>
+                        
                         </table>
 
-                    
                     </div>
 
 
