--- a/gsb-frais/templates/visiteur/vueFiche.html.twig
+++ b/gsb-frais/templates/visiteur/vueFiche.html.twig
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{{ asset('styles/vueFiche.css')}}" rel="stylesheet" type="text/css">
     <title>Visiteur - Pannel</title>
+    <script src="https://kit.fontawesome.com/d84560b21a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <script type="text/javascript" src="{{ asset('js/fiches_frais.js')}}">
@@ -72,12 +73,12 @@
 
                                 {% if ligneFraisHorsForfait is empty %}
 
-                                        <tr>
-                                            <td class="td_libelle"><input name="frais_hors_forfait[0][libelle]" id="td_libelle_0" class="input_libelle" type="text"></td>
-                                            <td class="td_date"><input name="frais_hors_forfait[0][date]" id="td_date_0" class="input_date" type="date"></td>
-                                            <td class="td_input"><input name="frais_hors_forfait[0][input]" id="td_input_0" class="input_prix" type="number" value="0" min="0"></td>
-                                            <td>x<td>
-                                        </tr>
+                                    <tr>
+                                        <td class="td_libelle"><input name="frais_hors_forfait[0][libelle]" id="td_libelle_0" class="input_libelle" type="text"></td>
+                                        <td class="td_date"><input name="frais_hors_forfait[0][date]" id="td_date_0" class="input_date" type="date"></td>
+                                        <td class="td_input"><input name="frais_hors_forfait[0][input]" id="td_input_0" class="input_prix" type="number" value="0" min="0"></td>
+                                        <td><i class="fa-solid fa-trash"></i><td>
+                                    </tr>
 
 
                                 {% else %}
@@ -113,7 +114,8 @@
                                                     min="0">
                                             </td>
                                             
-                                            <td>x</td>
+                                            <td><i class="fa-solid fa-trash" onclick="remove_frais(this)"></td>
+                                            
                                         </tr>
                                     {% endfor %}
 
