--- a/gsb-frais/public/styles/vueFicheVisiteur.css
+++ b/gsb-frais/public/styles/vueFicheVisiteur.css
@@ -17,7 +17,7 @@
     padding-top: 30px;
     display: inline-block;
     margin-left: 4%;
-    color: #23e9d9;
+    color: #fffcf2;
 }
 
 .header-link {
@@ -93,6 +93,15 @@
     font-size: 25px;
 }
 
+.fiche_frais h2
+{
+    text-align: center;
+    margin: 20px;
+    font-family: 'Hind Siliguri';
+    font-size: 12px;
+    font-style: italic;
+}
+
 
 
 
@@ -105,7 +114,7 @@ table {
 {
     width: 85%;
     position: relative;
-    margin: 0 auto 30px;
+    margin: 0 auto;
 
 }
 
@@ -146,7 +155,12 @@ table {
     width: max-content;
 }
 
-
+.td_libelle
+{
+    font-family: 'Hind Siliguri', sans-serif;
+    font-size: 15px;
+    line-height: 25px;
+}
 /*
 .td_libelle
 {
