--- a/gsb-frais/public/styles/vueFichesComptable.css
+++ b/gsb-frais/public/styles/vueFichesComptable.css
@@ -63,3 +63,60 @@
     width: 100%;
     background-color: #4284b3;
 }
+
+.fiches_list_position
+{
+    position: relative;
+    padding: 50px 50px 0px 30px;
+    display: flex;
+}
+
+.fiches_list
+{
+    height: 80vh;
+    position: relative;
+    width: 315px;
+    overflow: scroll;
+    background-color: white;
+    -webkit-box-shadow: 0px 0px 10px 5px rgba(94,94,94,0.54); 
+    box-shadow: 0px 0px 10px 5px rgba(94,94,94,0.54);
+}
+
+.fiches_list::-webkit-scrollbar {
+    display: none;
+  }
+
+.fiches_list h1
+{
+    font-family: 'Hind Siliguri', sans-serif;
+    font-size: 25px;
+    text-align: center;
+    margin: 20px;
+}
+
+.fiches_list button
+{
+    text-align: center;
+    width: 250px;
+    height: 40px;
+    display: block;
+    font-size: 18px;
+    border-radius: 5px;
+    outline: 0;
+    border: 0px;
+    margin: 10px auto 10px auto;
+    cursor: pointer;
+    border-radius: 5px;
+    
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.5); 
+    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.5);
+}
+
+
+
+.form_search
+{
+    position: relative;
+    width: 100%;
+    height: fit-content;
+}
