1er fix accueil responsive

--- a/gsb-frais/public/styles/annimation.css
+++ b/gsb-frais/public/styles/annimation.css
@@ -8,7 +8,8 @@
 .area{
     background: #477ca2;
     width: 100%;
-    height: 100vh; 
+    height: 100vh;
+    max-height: fit-content; 
 }
 
 .circles{
