--- a/gsb-frais/public/styles/vueAccueil.css
+++ b/gsb-frais/public/styles/vueAccueil.css
@@ -15,18 +15,27 @@
     -webkit-box-shadow: 0px 0px 15px 7px rgba(94,94,94,0.54); 
     box-shadow: 0px 0px 15px 7px rgba(94,94,94,0.54);
     top: 16%;
-    left: 20%;
-    position: fixed;
-    width: 65%;
-    height: 70vh;
+    margin: 0 auto;
+    position: relative;
+    width: fit-content;
+    height: fit-content;
     background-color: aliceblue;
     display: flex;
 }
 
+@media screen and (max-width: 1030px) {
+    .card{
+        display: block;
+    }
+}
+
+
+
 .login_section
 {
-    width: 50%;
+    width: 70vh;
     background-color: transparent;
+    height: 600px;
 }
 
 .form_comptable
@@ -36,9 +45,10 @@
 
 .information_section
 {
-    width: 50%;
+    width: 70vh;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(50,204,168,1) 0%, rgba(59,244,255,1) 100%);
+    height: 600px;
 }
 
 .login_card
