--- a/gsb-frais/templates/acceuil/vueAccueil.html.twig
+++ b/gsb-frais/templates/acceuil/vueAccueil.html.twig
@@ -16,84 +16,87 @@
             <div class="area">
                 <ul class="circles">
                     {% for i in 0..18 %}
-                        <li></li>
+                        <li><img src="https://en.pimg.jp/059/926/091/1/59926091.jpg" width="200" height="200"></li>
                     {% endfor %}
                 </ul>
-            </div>
-
 
             <div class="card">
 
-            <div class="login_section">
+                <div class="login_section">
 
-                <div class="login_card">
+                    <div class="login_card">
 
-                    <div class="form_visiteur" id="form_visiteur">
-                        
-                        <h1>Connectez vous en tant que Visiteur</h1>
-                        <div class="login_form">
-                            <form action="/visiteur/login" method="POST">
-    
-                                <input required="required" type="text" id="identifiant" name="identifiant" placeholder="identifiant">
-                                <br>
-                                <input required="required" type="password" id="password" name="password" placeholder="password">
-                                <br>
-                                <button type="submit">Se connecter</button>
+                        <div class="form_visiteur" id="form_visiteur">
+                            
+                            <h1>Connectez vous en tant que Visiteur</h1>
+                            <div class="login_form">
+                                <form action="/visiteur/login" method="POST">
         
-                            </form>    
+                                    <input required="required" type="text" id="identifiant" name="identifiant" placeholder="identifiant">
+                                    <br>
+                                    <input required="required" type="password" id="password" name="password" placeholder="password">
+                                    <br>
+                                    <button type="submit">Se connecter</button>
+            
+                                </form>    
+                            </div>
+
+                            <p class="login_error_message">
+                                {% for message in app.flashes('fail_pssd_visiteur') %}
+                                    {{message}}
+                                {% endfor %}
+                            </p>
+                            <div class="switch_login">
+                                <button onclick="comptable()">Comptable</button>
+                            </div>
+                        </div>
+            
+                        <div class="form_comptable" id="form_comptable">
+                            <h1>Connectez vous en tant que Comptable</h1>
+
+                            <div class="login_form">
+                                <form action="/comptable/login" method="POST">
+        
+                                    <input required="required" type="text" id="identifiant" name="identifiant" placeholder="identifiant">
+                                    <br>
+                                    <input required="required" type="password" id="password" name="password" placeholder="password">
+                                    <br>
+                                    <button type="submit">Se connecter</button>
+            
+                                </form>    
+                            </div>
+
+                            <p class="login_error_message">
+                                {% for message in app.flashes('fail_pssd_comptable') %}
+                                    {{message}}
+                                {% endfor %}
+                            </p>
+
+                            <div class="switch_login">
+                                <button onclick="visiteur()">Visiteur</button>
+                            </div>
                         </div>
 
-                        <p class="login_error_message">
-                            {% for message in app.flashes('fail_pssd_visiteur') %}
-                                {{message}}
-                            {% endfor %}
-                        </p>
-                        <div class="switch_login">
-                            <button onclick="comptable()">Comptable</button>
-                        </div>
                     </div>
-        
-                    <div class="form_comptable" id="form_comptable">
-                        <h1>Connectez vous en tant que Comptable</h1>
+                </div>
 
-                        <div class="login_form">
-                            <form action="/comptable/login" method="POST">
-    
-                                <input required="required" type="text" id="identifiant" name="identifiant" placeholder="identifiant">
-                                <br>
-                                <input required="required" type="password" id="password" name="password" placeholder="password">
-                                <br>
-                                <button type="submit">Se connecter</button>
-        
-                            </form>    
-                        </div>
-
-                        <p class="login_error_message">
-                            {% for message in app.flashes('fail_pssd_comptable') %}
-                                {{message}}
-                            {% endfor %}
-                        </p>
-
-                        <div class="switch_login">
-                            <button onclick="visiteur()">Visiteur</button>
+                <div class="information_section">
+                    
+                    <div class="information_card">
+                        <div id="slider" class="slider">
+                            
+                            <img src="{{ asset('img/canicule.jpg') }}" alt="La forêt de peupliers" id="slide" class="img_slide">
                         </div>
                     </div>
 
                 </div>
-            </div>
 
-            <div class="information_section">
-                
-                <div class="information_card">
-                    <div id="slider" class="slider">
-                        
-                        <img src="{{ asset('img/canicule.jpg') }}" alt="La forêt de peupliers" id="slide" class="img_slide">
-                    </div>
-                </div>
+            </div>  
 
             </div>
 
-            </div>    
+
+
         </div>
 
     </body>
